--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "clean": " prettier --write \"./src/**/*.{jsx,tsx,js}\""
   },
   "eslintConfig": {
     "extends": "react-app"
