--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "clean": " prettier --write \"./src/**/*.{jsx,tsx,js}\""
+    "clean": " prettier --write \"./src/**/*.{jsx,tsx,js,ts}\""
   },
   "eslintConfig": {
     "extends": "react-app"
